# ngen

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL.md
data/: example_bmi_multi_realization_config_w_netcdf.json  example_bmi_multi_realization_config_w_nfp.json  example_bmi_multi_realization_config_w_noah_pet_cfe.json  example_bmi_multi_realization_config_w_routing.json  example_multilayer_realization_config.json  example_realization_config.json  test_bmi_multi_realization_config_w_noah_pet_cfe.json
doc/: BMI_MODELS.md  REALIZATION_CONFIGURATION.md
include/bmi/: Bmi_Fortran_Adapter.hpp  Bmi_Fortran_Common.h
include/forcing/: NetCDFPerFeatureDataProvider.hpp
include/realizations/catchment/: Bmi_Fortran_Formulation.hpp  Bmi_Multi_Formulation.hpp  Formulation_Constructors.hpp  Formulation_Manager.hpp
include/realizations/config/: formulation.hpp
src/: NGen.cpp
src/bmi/: Bmi_Cpp_Adapter.cpp  Bmi_Fortran_Adapter.cpp  CMakeLists.txt
src/forcing/: NetCDFPerFeatureDataProvider.cpp
src/realizations/catchment/: Bmi_Cpp_Formulation.cpp  Bmi_Fortran_Formulation.cpp  Bmi_Module_Formulation.cpp  Bmi_Multi_Formulation.cpp  CMakeLists.txt  Formulation_Constructors.cpp
src/utilities/mdframe/: handler_netcdf.cpp
test/forcing/: NetCDFPerFeatureDataProvider_Test.cpp
test/realizations/catchments/: Bmi_Multi_Formulation_Test.cpp
test/utils/: mdframe_netcdf_Test.cpp
